--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -131,16 +131,16 @@
     <value>..\Resources\snake_corner_90.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="snake_head_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\snake_head_0.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>..\..\..\..\..\Desktop\Assets\Sprites\Aseprite\Snake\snake_head_0.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="snake_head_180" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\snake_head_180.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>..\..\..\..\..\Desktop\Assets\Sprites\Aseprite\Snake\snake_head_180.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="snake_head_270" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\snake_head_270.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>..\..\..\..\..\Desktop\Assets\Sprites\Aseprite\Snake\snake_head_270.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="snake_head_90" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\snake_head_90.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>..\..\..\..\..\Desktop\Assets\Sprites\Aseprite\Snake\snake_head_90.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="snake_straight_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\snake_straight_0.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
